<?php

declare(strict_types=1);

namespace DoctrineMigrations;

use Doctrine\DBAL\Schema\Schema;
use Doctrine\Migrations\AbstractMigration;

final class Version20260615193559 extends AbstractMigration
{
    public function getDescription(): string
    {
        return '';
    }

    public function up(Schema $schema): void
    {
        $this->addSql('CREATE TABLE accessory (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, name VARCHAR(150) NOT NULL, description TEXT DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE TABLE audio_equipment (power_watts INT NOT NULL, connector_type VARCHAR(50) NOT NULL, channel_count INT NOT NULL, id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE TABLE category (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, name VARCHAR(100) NOT NULL, description TEXT DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_64C19C15E237E06 ON category (name)');
        $this->addSql('CREATE TABLE equipment (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, reference VARCHAR(50) NOT NULL, name VARCHAR(150) NOT NULL, description TEXT DEFAULT NULL, daily_price NUMERIC(10, 2) NOT NULL, availability_status VARCHAR(20) NOT NULL, photo VARCHAR(255) DEFAULT NULL, added_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, category_id INT NOT NULL, supplier_id INT NOT NULL, type VARCHAR(255) NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_D338D583AEA34913 ON equipment (reference)');
        $this->addSql('CREATE INDEX IDX_D338D58312469DE2 ON equipment (category_id)');
        $this->addSql('CREATE INDEX IDX_D338D5832ADD6D8C ON equipment (supplier_id)');
        $this->addSql('CREATE TABLE equipment_accessory (equipment_id INT NOT NULL, accessory_id INT NOT NULL, PRIMARY KEY (equipment_id, accessory_id))');
        $this->addSql('CREATE INDEX IDX_738C6365517FE9FE ON equipment_accessory (equipment_id)');
        $this->addSql('CREATE INDEX IDX_738C636527E8CC78 ON equipment_accessory (accessory_id)');
        $this->addSql('CREATE TABLE invoice (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, number VARCHAR(50) NOT NULL, amount NUMERIC(10, 2) NOT NULL, payment_status VARCHAR(20) NOT NULL, issued_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, due_date DATE NOT NULL, reservation_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_9065174496901F54 ON invoice (number)');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_90651744B83297E7 ON invoice (reservation_id)');
        $this->addSql('CREATE TABLE maintenance (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, intervention_type VARCHAR(20) NOT NULL, description TEXT NOT NULL, intervention_date TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, status_after_intervention VARCHAR(20) NOT NULL, equipment_id INT NOT NULL, technician_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_2F84F8E9517FE9FE ON maintenance (equipment_id)');
        $this->addSql('CREATE INDEX IDX_2F84F8E9E6C5D496 ON maintenance (technician_id)');
        $this->addSql('CREATE TABLE notification (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, message TEXT NOT NULL, type VARCHAR(50) DEFAULT NULL, read BOOLEAN NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, user_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_BF5476CAA76ED395 ON notification (user_id)');
        $this->addSql('CREATE TABLE quote (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, requested_start_date DATE NOT NULL, requested_end_date DATE NOT NULL, event_city VARCHAR(100) DEFAULT NULL, estimated_amount NUMERIC(10, 2) NOT NULL, status VARCHAR(20) NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, valid_until DATE NOT NULL, user_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_6B71CBF4A76ED395 ON quote (user_id)');
        $this->addSql('CREATE TABLE quote_line (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, quantity INT NOT NULL, unit_price_per_day NUMERIC(10, 2) NOT NULL, quote_id INT NOT NULL, equipment_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_43F3EB7CDB805178 ON quote_line (quote_id)');
        $this->addSql('CREATE INDEX IDX_43F3EB7C517FE9FE ON quote_line (equipment_id)');
        $this->addSql('CREATE TABLE reservation (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, start_date DATE NOT NULL, end_date DATE NOT NULL, event_city VARCHAR(100) NOT NULL, venue_type VARCHAR(20) NOT NULL, status VARCHAR(20) NOT NULL, total_amount NUMERIC(10, 2) NOT NULL, weather_forecast VARCHAR(255) DEFAULT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, user_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_42C84955A76ED395 ON reservation (user_id)');
        $this->addSql('CREATE TABLE reservation_line (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, quantity INT NOT NULL, unit_price_per_day NUMERIC(10, 2) NOT NULL, reservation_id INT NOT NULL, equipment_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_C72D799EB83297E7 ON reservation_line (reservation_id)');
        $this->addSql('CREATE INDEX IDX_C72D799E517FE9FE ON reservation_line (equipment_id)');
        $this->addSql('CREATE TABLE review (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, rating INT NOT NULL, comment TEXT DEFAULT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, user_id INT NOT NULL, equipment_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_794381C6A76ED395 ON review (user_id)');
        $this->addSql('CREATE INDEX IDX_794381C6517FE9FE ON review (equipment_id)');
        $this->addSql('CREATE TABLE supplier (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, name VARCHAR(150) NOT NULL, email VARCHAR(180) DEFAULT NULL, phone VARCHAR(20) DEFAULT NULL, address VARCHAR(255) DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE TABLE "user" (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, email VARCHAR(180) NOT NULL, roles JSON NOT NULL, password VARCHAR(255) NOT NULL, last_name VARCHAR(100) NOT NULL, first_name VARCHAR(100) NOT NULL, phone VARCHAR(20) DEFAULT NULL, registered_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, active BOOLEAN NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX UNIQ_IDENTIFIER_EMAIL ON "user" (email)');
        $this->addSql('CREATE TABLE video_equipment (resolution VARCHAR(20) NOT NULL, brightness_lumens INT NOT NULL, projection_type VARCHAR(50) NOT NULL, id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE TABLE messenger_messages (id BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL, body TEXT NOT NULL, headers TEXT NOT NULL, queue_name VARCHAR(190) NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, available_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, delivered_at TIMESTAMP(0) WITHOUT TIME ZONE DEFAULT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE INDEX IDX_75EA56E0FB7336F0 ON messenger_messages (queue_name)');
        $this->addSql('CREATE INDEX IDX_75EA56E0E3BD61CE ON messenger_messages (available_at)');
        $this->addSql('CREATE INDEX IDX_75EA56E016BA31DB ON messenger_messages (delivered_at)');
        $this->addSql('ALTER TABLE audio_equipment ADD CONSTRAINT FK_8769D883BF396750 FOREIGN KEY (id) REFERENCES equipment (id) ON DELETE CASCADE');
        $this->addSql('ALTER TABLE equipment ADD CONSTRAINT FK_D338D58312469DE2 FOREIGN KEY (category_id) REFERENCES category (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE equipment ADD CONSTRAINT FK_D338D5832ADD6D8C FOREIGN KEY (supplier_id) REFERENCES supplier (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE equipment_accessory ADD CONSTRAINT FK_738C6365517FE9FE FOREIGN KEY (equipment_id) REFERENCES equipment (id) ON DELETE CASCADE');
        $this->addSql('ALTER TABLE equipment_accessory ADD CONSTRAINT FK_738C636527E8CC78 FOREIGN KEY (accessory_id) REFERENCES accessory (id) ON DELETE CASCADE');
        $this->addSql('ALTER TABLE invoice ADD CONSTRAINT FK_90651744B83297E7 FOREIGN KEY (reservation_id) REFERENCES reservation (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE maintenance ADD CONSTRAINT FK_2F84F8E9517FE9FE FOREIGN KEY (equipment_id) REFERENCES equipment (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE maintenance ADD CONSTRAINT FK_2F84F8E9E6C5D496 FOREIGN KEY (technician_id) REFERENCES "user" (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE notification ADD CONSTRAINT FK_BF5476CAA76ED395 FOREIGN KEY (user_id) REFERENCES "user" (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE quote ADD CONSTRAINT FK_6B71CBF4A76ED395 FOREIGN KEY (user_id) REFERENCES "user" (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE quote_line ADD CONSTRAINT FK_43F3EB7CDB805178 FOREIGN KEY (quote_id) REFERENCES quote (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE quote_line ADD CONSTRAINT FK_43F3EB7C517FE9FE FOREIGN KEY (equipment_id) REFERENCES equipment (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE reservation ADD CONSTRAINT FK_42C84955A76ED395 FOREIGN KEY (user_id) REFERENCES "user" (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE reservation_line ADD CONSTRAINT FK_C72D799EB83297E7 FOREIGN KEY (reservation_id) REFERENCES reservation (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE reservation_line ADD CONSTRAINT FK_C72D799E517FE9FE FOREIGN KEY (equipment_id) REFERENCES equipment (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE review ADD CONSTRAINT FK_794381C6A76ED395 FOREIGN KEY (user_id) REFERENCES "user" (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE review ADD CONSTRAINT FK_794381C6517FE9FE FOREIGN KEY (equipment_id) REFERENCES equipment (id) NOT DEFERRABLE');
        $this->addSql('ALTER TABLE video_equipment ADD CONSTRAINT FK_1147A816BF396750 FOREIGN KEY (id) REFERENCES equipment (id) ON DELETE CASCADE');
    }

    public function down(Schema $schema): void
    {
        $this->addSql('ALTER TABLE audio_equipment DROP CONSTRAINT FK_8769D883BF396750');
        $this->addSql('ALTER TABLE equipment DROP CONSTRAINT FK_D338D58312469DE2');
        $this->addSql('ALTER TABLE equipment DROP CONSTRAINT FK_D338D5832ADD6D8C');
        $this->addSql('ALTER TABLE equipment_accessory DROP CONSTRAINT FK_738C6365517FE9FE');
        $this->addSql('ALTER TABLE equipment_accessory DROP CONSTRAINT FK_738C636527E8CC78');
        $this->addSql('ALTER TABLE invoice DROP CONSTRAINT FK_90651744B83297E7');
        $this->addSql('ALTER TABLE maintenance DROP CONSTRAINT FK_2F84F8E9517FE9FE');
        $this->addSql('ALTER TABLE maintenance DROP CONSTRAINT FK_2F84F8E9E6C5D496');
        $this->addSql('ALTER TABLE notification DROP CONSTRAINT FK_BF5476CAA76ED395');
        $this->addSql('ALTER TABLE quote DROP CONSTRAINT FK_6B71CBF4A76ED395');
        $this->addSql('ALTER TABLE quote_line DROP CONSTRAINT FK_43F3EB7CDB805178');
        $this->addSql('ALTER TABLE quote_line DROP CONSTRAINT FK_43F3EB7C517FE9FE');
        $this->addSql('ALTER TABLE reservation DROP CONSTRAINT FK_42C84955A76ED395');
        $this->addSql('ALTER TABLE reservation_line DROP CONSTRAINT FK_C72D799EB83297E7');
        $this->addSql('ALTER TABLE reservation_line DROP CONSTRAINT FK_C72D799E517FE9FE');
        $this->addSql('ALTER TABLE review DROP CONSTRAINT FK_794381C6A76ED395');
        $this->addSql('ALTER TABLE review DROP CONSTRAINT FK_794381C6517FE9FE');
        $this->addSql('ALTER TABLE video_equipment DROP CONSTRAINT FK_1147A816BF396750');
        $this->addSql('DROP TABLE accessory');
        $this->addSql('DROP TABLE audio_equipment');
        $this->addSql('DROP TABLE category');
        $this->addSql('DROP TABLE equipment');
        $this->addSql('DROP TABLE equipment_accessory');
        $this->addSql('DROP TABLE invoice');
        $this->addSql('DROP TABLE maintenance');
        $this->addSql('DROP TABLE notification');
        $this->addSql('DROP TABLE quote');
        $this->addSql('DROP TABLE quote_line');
        $this->addSql('DROP TABLE reservation');
        $this->addSql('DROP TABLE reservation_line');
        $this->addSql('DROP TABLE review');
        $this->addSql('DROP TABLE supplier');
        $this->addSql('DROP TABLE "user"');
        $this->addSql('DROP TABLE video_equipment');
        $this->addSql('DROP TABLE messenger_messages');
    }
}
